--- a/Poisonous Mushroom Classifier.ipynb
+++ b/Poisonous Mushroom Classifier.ipynb
@@ -65,155 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2.53040195e-01,  2.69201547e-01,  2.85362899e-01,\n",
-       "         3.01524251e-01,  3.17685603e-01,  3.33846955e-01,\n",
-       "         3.50008306e-01,  3.66169658e-01,  3.82331010e-01,\n",
-       "         3.98492362e-01,  4.14653714e-01,  4.30815066e-01,\n",
-       "         4.46976417e-01,  4.63137769e-01,  4.79299121e-01,\n",
-       "         4.95460473e-01,  5.11621825e-01,  5.27783177e-01,\n",
-       "         5.43944529e-01,  5.60105880e-01,  5.76267232e-01,\n",
-       "         5.92428584e-01,  6.08589936e-01,  6.24751288e-01,\n",
-       "         6.40912640e-01,  6.57073992e-01,  6.73235343e-01,\n",
-       "         6.89396695e-01,  7.05558047e-01,  7.21719399e-01,\n",
-       "         7.37880751e-01,  7.54042103e-01,  7.70203454e-01,\n",
-       "         7.86364806e-01,  8.02526158e-01,  8.18687510e-01,\n",
-       "         8.34848862e-01,  8.51010214e-01,  8.67171566e-01,\n",
-       "         8.83332917e-01,  8.99494269e-01,  9.15655621e-01,\n",
-       "         9.31816973e-01,  9.47978325e-01,  9.64139677e-01,\n",
-       "         9.80301028e-01,  9.96462380e-01,  1.01262373e+00,\n",
-       "         1.02878508e+00,  1.04494644e+00,  1.06110779e+00,\n",
-       "         1.07726914e+00,  1.09343049e+00,  1.10959184e+00,\n",
-       "         1.12575320e+00,  1.14191455e+00,  1.15807590e+00,\n",
-       "         1.17423725e+00,  1.19039860e+00,  1.20655995e+00,\n",
-       "         1.22272131e+00,  1.23888266e+00,  1.25504401e+00,\n",
-       "         1.27120536e+00,  1.28736671e+00,  1.30352807e+00,\n",
-       "         1.31968942e+00,  1.33585077e+00,  1.35201212e+00,\n",
-       "         1.36817347e+00,  1.38433482e+00,  1.40049618e+00,\n",
-       "         1.41665753e+00,  1.43281888e+00,  1.44898023e+00,\n",
-       "         1.46514158e+00,  1.48130294e+00,  1.49746429e+00,\n",
-       "         1.51362564e+00,  1.52978699e+00,  1.54594834e+00,\n",
-       "         1.56210969e+00,  1.57827105e+00,  1.59443240e+00,\n",
-       "         1.61059375e+00,  1.62675510e+00,  1.64291645e+00,\n",
-       "         1.65907781e+00,  1.67523916e+00,  1.69140051e+00,\n",
-       "         1.70756186e+00,  1.72372321e+00,  1.73988457e+00,\n",
-       "         1.75604592e+00,  1.77220727e+00,  1.78836862e+00,\n",
-       "         1.80452997e+00,  1.82069132e+00,  1.83685268e+00,\n",
-       "         1.85301403e+00],\n",
-       "       [ 1.22989539e+00,  1.15143628e+00,  1.07722393e+00,\n",
-       "         1.00717881e+00,  9.41221419e-01,  8.79272234e-01,\n",
-       "         8.21251741e-01,  7.67080426e-01,  7.16678772e-01,\n",
-       "         6.69967266e-01,  6.26866391e-01,  5.87296632e-01,\n",
-       "         5.51178474e-01,  5.18432402e-01,  4.88978901e-01,\n",
-       "         4.62738455e-01,  4.39631549e-01,  4.19578668e-01,\n",
-       "         4.02500297e-01,  3.88316920e-01,  3.76949022e-01,\n",
-       "         3.68317088e-01,  3.62341603e-01,  3.58943051e-01,\n",
-       "         3.58041918e-01,  3.59558687e-01,  3.63413845e-01,\n",
-       "         3.69527874e-01,  3.77821261e-01,  3.88214491e-01,\n",
-       "         4.00628046e-01,  4.14982414e-01,  4.31198078e-01,\n",
-       "         4.49195522e-01,  4.68895233e-01,  4.90217694e-01,\n",
-       "         5.13083391e-01,  5.37412808e-01,  5.63126429e-01,\n",
-       "         5.90144741e-01,  6.18388226e-01,  6.47777371e-01,\n",
-       "         6.78232660e-01,  7.09674578e-01,  7.42023609e-01,\n",
-       "         7.75200238e-01,  8.09124950e-01,  8.43718230e-01,\n",
-       "         8.78900563e-01,  9.14592432e-01,  9.50714324e-01,\n",
-       "         9.87186723e-01,  1.02393011e+00,  1.06086498e+00,\n",
-       "         1.09791181e+00,  1.13499108e+00,  1.17202328e+00,\n",
-       "         1.20892890e+00,  1.24562842e+00,  1.28204233e+00,\n",
-       "         1.31809110e+00,  1.35369523e+00,  1.38877520e+00,\n",
-       "         1.42325149e+00,  1.45704459e+00,  1.49007498e+00,\n",
-       "         1.52226316e+00,  1.55352959e+00,  1.58379478e+00,\n",
-       "         1.61297919e+00,  1.64100332e+00,  1.66778766e+00,\n",
-       "         1.69325268e+00,  1.71731887e+00,  1.73990672e+00,\n",
-       "         1.76093671e+00,  1.78032933e+00,  1.79800506e+00,\n",
-       "         1.81388438e+00,  1.82788778e+00,  1.83993575e+00,\n",
-       "         1.84994877e+00,  1.85784732e+00,  1.86355189e+00,\n",
-       "         1.86698296e+00,  1.86806103e+00,  1.86670656e+00,\n",
-       "         1.86284006e+00,  1.85638200e+00,  1.84725286e+00,\n",
-       "         1.83537314e+00,  1.82066332e+00,  1.80304388e+00,\n",
-       "         1.78243530e+00,  1.75875808e+00,  1.73193269e+00,\n",
-       "         1.70187963e+00,  1.66851936e+00,  1.63177240e+00,\n",
-       "         1.59155920e+00],\n",
-       "       [-1.99554310e-01, -3.95192728e-03,  1.79851752e-01,\n",
-       "         3.51005136e-01,  5.08831706e-01,  6.52819233e-01,\n",
-       "         7.82609240e-01,  8.97986721e-01,  9.98870117e-01,\n",
-       "         1.08530155e+00,  1.15743729e+00,  1.21553852e+00,\n",
-       "         1.25996233e+00,  1.29115292e+00,  1.30963316e+00,\n",
-       "         1.31599632e+00,  1.31089811e+00,  1.29504889e+00,\n",
-       "         1.26920626e+00,  1.23416782e+00,  1.19076415e+00,\n",
-       "         1.13985218e+00,  1.08230867e+00,  1.01902405e+00,\n",
-       "         9.50896441e-01,  8.78825970e-01,  8.03709344e-01,\n",
-       "         7.26434655e-01,  6.47876457e-01,  5.68891088e-01,\n",
-       "         4.90312256e-01,  4.12946874e-01,  3.37571147e-01,\n",
-       "         2.64926923e-01,  1.95718291e-01,  1.30608438e-01,\n",
-       "         7.02167560e-02,  1.51162118e-02, -3.41690366e-02,\n",
-       "        -7.71657636e-02, -1.13453547e-01, -1.42666382e-01,\n",
-       "        -1.64494044e-01, -1.78683194e-01, -1.85038228e-01,\n",
-       "        -1.83421873e-01, -1.73755533e-01, -1.56019368e-01,\n",
-       "        -1.30252132e-01, -9.65507462e-02, -5.50696232e-02,\n",
-       "        -6.01973201e-03,  5.03325883e-02,  1.13667071e-01,\n",
-       "         1.83611221e-01,  2.59742264e-01,  3.41589357e-01,\n",
-       "         4.28636046e-01,  5.20322987e-01,  6.16050916e-01,\n",
-       "         7.15183874e-01,  8.17052690e-01,  9.20958717e-01,\n",
-       "         1.02617782e+00,  1.13196463e+00,  1.23755703e+00,\n",
-       "         1.34218093e+00,  1.44505526e+00,  1.54539723e+00,\n",
-       "         1.64242789e+00,  1.73537785e+00,  1.82349336e+00,\n",
-       "         1.90604254e+00,  1.98232198e+00,  2.05166348e+00,\n",
-       "         2.11344114e+00,  2.16707864e+00,  2.21205680e+00,\n",
-       "         2.24792141e+00,  2.27429129e+00,  2.29086658e+00,\n",
-       "         2.29743739e+00,  2.29389257e+00,  2.28022881e+00,\n",
-       "         2.25656001e+00,  2.22312684e+00,  2.18030664e+00,\n",
-       "         2.12862347e+00,  2.06875850e+00,  2.00156065e+00,\n",
-       "         1.92805743e+00,  1.84946605e+00,  1.76720485e+00,\n",
-       "         1.68290491e+00,  1.59842194e+00,  1.51584842e+00,\n",
-       "         1.43752602e+00,  1.36605824e+00,  1.30432333e+00,\n",
-       "         1.25548743e+00],\n",
-       "       [ 6.79500685e+00,  4.14319072e+00,  2.23122941e+00,\n",
-       "         9.10495113e-01,  5.49820638e-02, -4.41341500e-01,\n",
-       "        -6.66946926e-01, -6.94939268e-01, -5.85046187e-01,\n",
-       "        -3.85415355e-01, -1.34233444e-01,  1.38820728e-01,\n",
-       "         4.11276954e-01,  6.66716840e-01,  8.93748582e-01,\n",
-       "         1.08510295e+00,  1.23684061e+00,  1.34766146e+00,\n",
-       "         1.41830711e+00,  1.45104808e+00,  1.44924788e+00,\n",
-       "         1.41699637e+00,  1.35880558e+00,  1.27936109e+00,\n",
-       "         1.18332312e+00,  1.07517130e+00,  9.59087773e-01,\n",
-       "         8.38873796e-01,  7.17894935e-01,  5.99050776e-01,\n",
-       "         4.84765099e-01,  3.76992952e-01,  2.77241306e-01,\n",
-       "         1.86600329e-01,  1.05782572e-01,  3.51676666e-02,\n",
-       "        -2.51495986e-02, -7.53097035e-02, -1.15638955e-01,\n",
-       "        -1.46601572e-01, -1.68754469e-01, -1.82705710e-01,\n",
-       "        -1.89077378e-01, -1.88473468e-01, -1.81453173e-01,\n",
-       "        -1.68509839e-01, -1.50055655e-01, -1.26412048e-01,\n",
-       "        -9.78056092e-02, -6.43692568e-02, -2.61482686e-02,\n",
-       "         1.68893107e-02,  6.48384285e-02,  1.17839572e-01,\n",
-       "         1.76058775e-01,  2.39665795e-01,  3.08811204e-01,\n",
-       "         3.83603147e-01,  4.64084536e-01,  5.50211432e-01,\n",
-       "         6.41833346e-01,  7.38676174e-01,  8.40328419e-01,\n",
-       "         9.46231301e-01,  1.05567330e+00,  1.16778960e+00,\n",
-       "         1.28156674e+00,  1.39585285e+00,  1.50937347e+00,\n",
-       "         1.62075307e+00,  1.72854215e+00,  1.83124956e+00,\n",
-       "         1.92737967e+00,  2.01547377e+00,  2.09415484e+00,\n",
-       "         2.16217472e+00,  2.21846248e+00,  2.26217252e+00,\n",
-       "         2.29273064e+00,  2.30987633e+00,  2.31369889e+00,\n",
-       "         2.30466503e+00,  2.28363518e+00,  2.25186541e+00,\n",
-       "         2.21099164e+00,  2.16299246e+00,  2.11012655e+00,\n",
-       "         2.05484023e+00,  1.99964063e+00,  1.94692916e+00,\n",
-       "         1.89878997e+00,  1.85672743e+00,  1.82134642e+00,\n",
-       "         1.79196871e+00,  1.76617828e+00,  1.73928806e+00,\n",
-       "         1.70372005e+00,  1.64829030e+00,  1.55738980e+00,\n",
-       "         1.41005184e+00]])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def step_one():\n",
     "    from sklearn.linear_model import LinearRegression\n",
@@ -244,7 +98,7 @@
     "    #Stack arrays in sequence vertically (row wise)\n",
     "    answer = np.vstack(answer)\n",
     "    return answer\n",
-    "step_one()"
+    "#step_one()"
    ]
   },
   {
@@ -1067,7 +921,7 @@
    "source": [
     "### Step 2\n",
     "\n",
-    "A function that fits a polynomial LinearRegression model on the training data `X_train` for degrees 0 through 9. For each model I compute the $R^2$ (coefficient of determination) regression score on the training data as well as the the test data, and return both of these arrays in a tuple.\n",
+    "This function fits a polynomial LinearRegression model on the training data `X_train` for degrees 0 through 9. For each model I compute the $R^2$ (coefficient of determination) regression score on the training data as well as the the test data, and return both of these arrays in a tuple.\n",
     "\n",
     "*This function returns one tuple of numpy arrays `(r2_train, r2_test)`. Both arrays have shape `(10,)`*"
    ]
@@ -1133,7 +987,7 @@
    "source": [
     "### Step 3\n",
     "\n",
-    "Based on the $R^2$ scores from step 2 (degree levels 0 through 9), I determine what degree level corresponds to an underfitting model. I then determine what degree level corresponds to an overfitting model. I then determine the degree level that would provide a model with good generalization performance. I do this by plotting the $R^2$ scores from step 2 this allows me to visualize the relationship between degree level and $R^2$\n",
+    "Based on the $R^2$ scores from step 2 (degree levels 0 through 9), I determine what degree level corresponds to an underfitting model. I then determine what degree level corresponds to an overfitting model. I then determine the degree level that would provide a model with good generalization performance. I do this by plotting the $R^2$ scores from step 2. This allows me to visualize the relationship between degree level and $R^2$\n",
     "\n",
     "*This function return one tuple with the degree values in this order: `(Underfitting, Overfitting, Good_Generalization)`.* "
    ]
@@ -1967,7 +1821,7 @@
     "\n",
     "Training models on high degree polynomial features can result in overly complex models that overfit, so I will use regularized versions of the model to constrain model complexity, as such as with with Ridge and Lasso linear regression.\n",
     "\n",
-    "Here I train two models: a non-regularized LinearRegression model (default parameters) and a regularized Lasso Regression model (with parameters `alpha=0.01`, `max_iter=10000`) both on polynomial features of degree 12. I Return the $R^2$ score for both the LinearRegression and Lasso model's test sets.\n",
+    "Here I train two models: a non-regularized LinearRegression model (default parameters) and a regularized Lasso Regression model (with parameters `alpha=0.01`, `max_iter=10000`) both on polynomial features of degree 12. I return the $R^2$ score for both the LinearRegression and Lasso model's test sets.\n",
     "\n",
     "*This function returns one tuple `(LinearRegression_R2_test_score, Lasso_R2_test_score)`*"
    ]
