--- a/Poisonous Mushroom Classifier.ipynb
+++ b/Poisonous Mushroom Classifier.ipynb
@@ -2041,7 +2041,7 @@
    "source": [
     "### Step 7\n",
     "\n",
-    "Based on the scores from Step 6, I determine what gamma value corresponds to a model that is underfitting (and has the worst test set accuracy). I also determine what gamma value corresponds to a model that is overfitting (and has the worst test set accuracy). I then determine what choice of gamma would be the best choice for a model with good generalization performance on this dataset (high accuracy on both training and test set)? \n",
+    "Based on the scores from Step 6, I determine what gamma value corresponds to a model that is underfitting (and has the worst test set accuracy). I also determine what gamma value corresponds to a model that is overfitting (and has the worst test set accuracy). I then determine what choice of gamma would be the best choice for a model with good generalization performance on this dataset (high accuracy on both training and test set)\n",
     "\n",
     "I do this by plotting the scores from step 6 to visualize the relationship between gamma and accuracy. \n",
     "\n",
