--- a/Credit Card Fraud Identification Classifier.ipynb
+++ b/Credit Card Fraud Identification Classifier.ipynb
@@ -227,7 +227,7 @@
     "\n",
     "I Train a logistic regression classifier with default parameters using X_train and y_train.\n",
     "\n",
-    "For the logisitic regression classifier, I create a precision recall curve and a roc curve using y_test as the probability estimates for X_test (probability it is fraud).\n",
+    "For the logistic regression classifier, I create a precision recall curve and a roc curve using y_test as the probability estimates for X_test (probability it is fraud).\n",
     "\n",
     "Looking at the precision recall curve, I determine what the recall is when the precision is `0.75`?\n",
     "\n",
@@ -288,7 +288,7 @@
    "source": [
     "### Step 6\n",
     "\n",
-    "I perform a grid search over the parameters listed below for a Logisitic Regression classifier. I use recall for scoring and the default 3-fold cross validation.\n",
+    "I perform a grid search over the parameters listed below for a Logistic Regression classifier. I use recall for scoring and the default 3-fold cross validation.\n",
     "\n",
     "`'penalty': ['l1', 'l2']`\n",
     "\n",
