--- a/Credit Card Fraud Identification Classifier.ipynb
+++ b/Credit Card Fraud Identification Classifier.ipynb
@@ -180,7 +180,7 @@
     "\n",
     "Using the SVC classifier with parameters `{'C': 1e9, 'gamma': 1e-07}`, I generate the confusion matrix when using a threshold of -220 on the decision function. I use X_test and y_test.\n",
     "\n",
-    "*This function should return a confusion matrix, a 2x2 numpy array with 4 integers.*"
+    "*This function returns a confusion matrix, a 2x2 numpy array with 4 integers.*"
    ]
   },
   {
