--- a/Blight Ticket Predictive Classifier.ipynb
+++ b/Blight Ticket Predictive Classifier.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -127,18 +127,83 @@
       "C:\\Users\\willi\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2856: DtypeWarning: Columns (11,12,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  if self.run_code(code, result):\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ticket_id\n",
+       "284932    0.205176\n",
+       "285362    0.094864\n",
+       "285361    0.228263\n",
+       "285338    0.205176\n",
+       "285346    0.228263\n",
+       "285345    0.308038\n",
+       "285347    0.173571\n",
+       "285342    0.608790\n",
+       "285530    0.279054\n",
+       "284989    0.048395\n",
+       "285344    0.176957\n",
+       "285343    0.094864\n",
+       "285340    0.094864\n",
+       "285341    0.176957\n",
+       "285349    0.181394\n",
+       "285348    0.145468\n",
+       "284991    0.106330\n",
+       "285532    0.119426\n",
+       "285406    0.119426\n",
+       "285001    0.119426\n",
+       "285006    0.094864\n",
+       "285405    0.065633\n",
+       "285337    0.439720\n",
+       "285496    0.176957\n",
+       "285497    0.205176\n",
+       "285378    0.039963\n",
+       "285589    0.107934\n",
+       "285585    0.205176\n",
+       "285501    0.228263\n",
+       "285581    0.092503\n",
+       "            ...   \n",
+       "376367    0.119426\n",
+       "376366    0.112573\n",
+       "376362    0.112573\n",
+       "376363    0.205176\n",
+       "376365    0.119426\n",
+       "376364    0.112573\n",
+       "376228    0.112573\n",
+       "376265    0.112573\n",
+       "376286    0.553783\n",
+       "376320    0.112573\n",
+       "376314    0.112573\n",
+       "376327    0.553783\n",
+       "376385    0.553783\n",
+       "376435    0.119426\n",
+       "376370    0.553783\n",
+       "376434    0.176957\n",
+       "376459    0.228263\n",
+       "376478    0.042838\n",
+       "376473    0.107662\n",
+       "376484    0.084503\n",
+       "376482    0.109218\n",
+       "376480    0.109218\n",
+       "376479    0.109218\n",
+       "376481    0.109218\n",
+       "376483    0.102882\n",
+       "376496    0.094864\n",
+       "376497    0.094864\n",
+       "376499    0.228263\n",
+       "376500    0.228263\n",
+       "369851    0.486462\n",
+       "Length: 61001, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "blight_model()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
